--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@400;600&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   font-size: 10px;
   --dark: #232323;
@@ -55,6 +59,27 @@ body {
   color: var(--light);
   display: inline-block;
   margin: 0 1.2rem;
+}
+.arr-down {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  color: var(--light);
+  font-size: 4.8rem;
+  animation: arr-bounce 3s infinite;
+}
+
+@keyframes arr-bounce {
+  0% {
+    transform: translate(-50%, 0);
+  }
+  50% {
+    transform: translate(-50%, 16px);
+  }
+  100% {
+    transform: translate(-50%, 0);
+  }
 }
 
 .half-text {
